DocSetLabeler - Perf. improvements